--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,22 +16,79 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
   build_sdk:
-    name: buildSDK
+    name: build_sdks
+    runs-on: ubuntu-latest
+    needs: prerequisites
+    strategy:
+      fail-fast: true
+      matrix:
+        goversion: [1.16.x]
+        dotnetversion: [ 3.1.301 ]
+        nodeversion: [ 14.x ]
+        pythonversion: [ 3.7 ]
+        # language: [ nodejs, python, dotnet, go ]
+        language: [ go ]
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Unshallow clone for tags
+        run: git fetch --prune --unshallow --tags
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.goversion }}
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{matrix.nodeversion}}
+          registry-url: https://registry.npmjs.org
+      - name: Setup DotNet
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{matrix.dotnetversion}}
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{matrix.pythonversion}}
+      - name: Install pulumictl
+        uses: jaxxstorm/action-install-gh-release@v1.1.0
+        with:
+          repo: pulumi/pulumictl
+      - name: Install Pulumi CLI
+        uses: pulumi/action-install-pulumi-cli@v1.0.1
+        with:
+          pulumi-version: 3.0.0-rc.1
+      - name: Download provider + tfgen binaries
+        uses: actions/download-artifact@v2
+        with:
+          name: pulumi-${{ env.PROVIDER }}
+          path: ${{ github.workspace }}/bin
+      - name: Restore binary perms
+        run: find ${{ github.workspace }} -name "pulumi-*-${{ env.PROVIDER }}" -print
+          -exec chmod +x {} \;
+      - name: Generate SDK
+        run: make ${{ matrix.language }}_sdk
+      - name: Check worktree clean
+        run: ./ci-scripts/ci/check-worktree-is-clean
+      - run: git status --porcelain
+      - name: Compress SDK folder
+        run: tar -zcf sdk/${{ matrix.language }}.tar.gz -C sdk/${{ matrix.language }} .
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.language  }}-sdk.tar.gz
+          path: ${{ github.workspace}}/sdk/${{ matrix.language }}.tar.gz
+  prerequisites:
+    name: prerequisites
     runs-on: ubuntu-latest
     strategy:
       matrix:
         goversion: [1.16.x]
-        language: [ nodejs, python, dotnet, go ]
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
         with:
           lfs: true
-      - name: Checkout Scripts Repo
-        uses: actions/checkout@v2
-        with:
-          path: ci-scripts
-          repository: pulumi/scripts
       - name: Unshallow clone for tags
         run: git fetch --prune --unshallow --tags
       - name: Install Go
@@ -48,26 +105,13 @@ jobs:
           pulumi-version: 3.0.0-rc.1
       - name: Build gen binaries
         run: make gen
-      - name: Build Provider binary
+      - name: Build provider binary
         run: make provider
-      - name: Create SDK
-        with:
-          run: make ${{ matrix.language }}_sdk
-      # - name: Check worktree clean
-      #   run: ./ci-scripts/ci/check-worktree-is-clean
-      - name: Test Provider Library
-        run: make test_provider
-      - name: Compress SDK folder
-        run: tar -zcf sdk/${{ matrix.language }}.tar.gz -C sdk/${{ matrix.language }} .
+      - run: git status --porcelain
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ matrix.language  }}-sdk.tar.gz
-          path: ${{ github.workspace}}/sdk/${{ matrix.language }}.tar.gz
-      - if: failure() && github.event_name == 'push'
-        name: Notify Slack
-        uses: 8398a7/action-slack@v3
-        with:
-          author_name: Failure in running ${{ matrix.language }} tests
-          fields: repo,commit,author,action
-          status: ${{ job.status }}
+          name: pulumi-${{ env.PROVIDER }}
+          path: ${{ github.workspace }}/bin
+      - name: Test Provider Library
+        run: make test_provider
