--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -112,3 +112,35 @@ jobs:
           path: ${{ github.workspace }}/bin
       - name: Test Provider Library
         run: make test_provider
+  publish:
+    name: publish
+    needs: build_sdk
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        goversion: [1.16.x]
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Unshallow clone for tags
+        run: git fetch --prune --unshallow --tags
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.goversion }}
+      - name: Install pulumictl
+        uses: jaxxstorm/action-install-gh-release@v1.1.0
+        with:
+          repo: pulumi/pulumictl
+      - name: Install Pulumi CLI
+        uses: pulumi/action-install-pulumi-cli@v1.0.1
+        with:
+          pulumi-version: 3.0.0-rc.1
+      - name: Set Release Version
+        run: echo "GORELEASER_CURRENT_TAG=v$(pulumictl get version --language
+          generic)" >> $GITHUB_ENV
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          args: -p 1 -f .goreleaser.yml --rm-dist --skip-validate --timeout 60m0s
+          version: latest
